@@ -1,3 +1,11 @@
+2010-09-20  Peter Rosin  <peda@lysator.liu.se>
+
+	tests: __declspec (dll{ex,im}port) in tests/exceptions.at
+	* tests/exceptions.at (common.h, module.h, lib.h) [w32]: Use
+	__declspec (dllimport) and __declspec (dllexport) instead of
+	the less portable __attribute__ ((dllimport)) and
+	__attribute__ ((dllexport)).  Makes the test compile on MSVC.
+
 2010-09-19  Peter Rosin  <peda@lysator.liu.se>
 
 	tests: Import items from liba1 for MSVC.
